--- a/vcontrold/vcontrold.vcxproj
+++ b/vcontrold/vcontrold.vcxproj
@@ -68,7 +68,6 @@
     <IncludePath>/usr/include/libxml2;H:\linuxincludes;H:\linuxincludes\libxml2;H:\linuxincludes\arm-linux-gnueabihf;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="arithmetic.cpp" />
     <ClCompile Include="common.cpp" />
     <ClCompile Include="framer.cpp" />
     <ClCompile Include="io.cpp" />
@@ -79,12 +78,10 @@
     <ClCompile Include="xmlconfig.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="arithmetic.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="framer.h" />
     <ClInclude Include="io.h" />
     <ClInclude Include="parser.h" />
-    <ClInclude Include="prompt.h" />
     <ClInclude Include="socket.h" />
     <ClInclude Include="unit.h" />
     <ClInclude Include="xmlconfig.h" />
@@ -94,7 +91,7 @@
       <PreprocessorDefinitions>
       </PreprocessorDefinitions>
       <CLanguageStandard>Default</CLanguageStandard>
-      <CppLanguageStandard>Default</CppLanguageStandard>
+      <CppLanguageStandard>gnu++11</CppLanguageStandard>
     </ClCompile>
     <Link>
       <LibraryDependencies>xml2;pthread</LibraryDependencies>
