--- a/vcontrold/vcontrold.vcxproj
+++ b/vcontrold/vcontrold.vcxproj
@@ -105,7 +105,7 @@
       <CLanguageStandard>Default</CLanguageStandard>
     </ClCompile>
     <ClCompile>
-      <CppLanguageStandard>Default</CppLanguageStandard>
+      <CppLanguageStandard>gnu++11</CppLanguageStandard>
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
