--- a/vcontrold/vcontrold.vcxproj
+++ b/vcontrold/vcontrold.vcxproj
@@ -72,6 +72,7 @@
     <ClCompile Include="common.cpp" />
     <ClCompile Include="framer.cpp" />
     <ClCompile Include="io.cpp" />
+    <ClCompile Include="optolink.cpp" />
     <ClCompile Include="parser.cpp" />
     <ClCompile Include="socket.cpp" />
     <ClCompile Include="conversion.cpp" />
@@ -81,6 +82,7 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="framer.h" />
+    <ClInclude Include="optolink.h" />
     <ClInclude Include="io.h" />
     <ClInclude Include="parser.h" />
     <ClInclude Include="socket.h" />
